# c-synth

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile Backup  Readme.md
JUCE/: Makefile  cmake_install.cmake
JUCE/modules/: JuceHeader.h  Makefile  cmake_install.cmake  juce_build_tools.h
JUCE/modules/juce_core/system/: juce_TargetPlatform.h
JUCE/modules/juce_cryptography/: juce_cryptography.h
JUCE/modules/juce_data_structures/: juce_data_structures.h
JUCE/modules/juce_events/: juce_events.h
JUCE/modules/juce_graphics/: juce_graphics.h
JUCE/modules/juce_gui_basics/: juce_gui_basics.h
JUCE/modules/juce_gui_extra/: juce_gui_extra.h
JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
JUCE/tools/modules/: Makefile  cmake_install.cmake
src/: backjuce_config.h  globals.cpp  main.cpp
src/AudioCallback/: AudioCallBack.cpp  AudioCallBack.h  CMakeLists.txt
src/Envelope/: CMakeLists.txt  Envelope.cpp  Envelope.h
src/Oscillator/: CMakeLists.txt  Makefile  Oscillator.cpp  Oscillator.h  cmake_install.cmake
src/ToneGenerator/: CMakeLists.txt  Makefile  ToneGenerator.cpp  ToneGenerator.h  cmake_install.cmake
src/gui/: Main.cpp  MainApplication.h  MainWindow.h
